# jxfls

./: .gitignore  README.md  package.json  pnpm-lock.yaml  tailwind.config.js
src/: App.vue  NavBar.vue  TrafficLight.vue  logger.ts  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  logger.rs  main.rs
