[package]
name = "jxfls"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[build]
incremental = true
jobs = 16

[lib]
name = "jxfls_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

